; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_internal.c_crypto_hash_update.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_internal.c_crypto_hash_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_hash = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_hash_update(%struct.crypto_hash* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.crypto_hash*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store %struct.crypto_hash* %0, %struct.crypto_hash** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %8 = icmp eq %struct.crypto_hash* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %3
  br label %29

10:                                               ; preds = %3
  %11 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %12 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  switch i32 %13, label %28 [
    i32 130, label %14
    i32 133, label %14
    i32 129, label %21
    i32 132, label %21
  ]

14:                                               ; preds = %10, %10
  %15 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %16 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 2
  %18 = load i32*, i32** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @MD5Update(i32* %17, i32* %18, i64 %19)
  br label %29

21:                                               ; preds = %10, %10
  %22 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %23 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i32*, i32** %5, align 8
  %26 = load i64, i64* %6, align 8
  %27 = call i32 @SHA1Update(i32* %24, i32* %25, i64 %26)
  br label %29

28:                                               ; preds = %10
  br label %29

29:                                               ; preds = %9, %28, %21, %14
  ret void
}

declare dso_local i32 @MD5Update(i32*, i32*, i64) #1

declare dso_local i32 @SHA1Update(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
